Final notebook updates, clear output

--- a/Steady State Analysis.ipynb
+++ b/Steady State Analysis.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Recompiling stale cache file /home/allen/.julia/compiled/v1.0/ArmRole/O2XaH.ji for ArmRole [f6a2469e-950c-11e8-131e-8998aaf96874]\n",
-      "└ @ Base loading.jl:1190\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using ProgressMeter, Distributed\n",
     "# Add workers for parallel processing\n",
@@ -35,66 +26,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ReentrantLock(nothing, Condition(Any[]), 0)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define data location for all processes\n",
     "if Sys.islinux()\n",
     "    diskLoc = \"/media/allen/Seagate Backup Plus Drive/\"\n",
-    "#     diskLoc = \"/media/allen/My Book - Master/\"\n",
     "elseif Sys.iswindows()\n",
     "   diskLoc = \"F:\\\\\"\n",
     "end\n",
     "\n",
     "rootdir = joinpath(diskLoc, \"projects\", \"Arm-role-stability\")\n",
     "\n",
-    "# Read all perturbations\n",
+    "# Read all trials\n",
     "sstrials = readsstrials(rootdir);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15-element Array{NamedTuple{(:Subject, :numtrials),Tuple{Int64,Int64}},1}:\n",
-       " (Subject = 1, numtrials = 6) \n",
-       " (Subject = 2, numtrials = 6) \n",
-       " (Subject = 3, numtrials = 6) \n",
-       " (Subject = 4, numtrials = 6) \n",
-       " (Subject = 5, numtrials = 6) \n",
-       " (Subject = 6, numtrials = 6) \n",
-       " (Subject = 7, numtrials = 6) \n",
-       " (Subject = 8, numtrials = 6) \n",
-       " (Subject = 9, numtrials = 6) \n",
-       " (Subject = 10, numtrials = 6)\n",
-       " (Subject = 11, numtrials = 6)\n",
-       " (Subject = 12, numtrials = 6)\n",
-       " (Subject = 13, numtrials = 6)\n",
-       " (Subject = 14, numtrials = 6)\n",
-       " (Subject = 15, numtrials = 6)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[ (Subject=r[1], numtrials=length(r[2])) for r in [ (sub, findall(t -> t.subject == sub, sstrials)) for sub in 1:15 ] ]"
    ]
@@ -120,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,19 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mProcessing data... 100%[================================] Time: 0:01:18\u001b[39m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Fit all the perturbations, don't quit on an error, add it to the results\n",
+    "# Analyze all trials, don't bail on error\n",
     "next!(p)\n",
     "analyzedtrials = pmap(analyzeandupdate, sstrials; on_error=identity)\n",
     "finish!(p)"
@@ -165,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,20 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Task (done) @0x00007f4d616679d0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We don't need the other workers anymore\n",
     "rmprocs(prs)"
@@ -238,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,20 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Analysis of trunk motion during steady-state walking\\nGenerated: 2019-02-04T14:20:56.387\\n\""
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup loop variables\n",
     "variables = [\n",
@@ -299,19 +222,15 @@
     "\n",
     "# Initialize the results string\n",
     "results = Vector{String}(undef, 1)\n",
-    "results[1] = \"Analysis of trunk motion during steady-state walking\\nGenerated: $(now())\\n\""
+    "results[1] = \"Analysis of stability, coordination, and symmetry during steady-state walking\\nGenerated: $(now())\\n\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create views for repeatedly used parts of the results\n",
-    "\n",
-    "# subresults = view(results, (header+1):length(results))\n",
-    "\n",
     "# Loop through all variables and conditions\n",
     "# Beginning with the variables will keep all the variables chunked together, this will make\n",
     "# the analysis in SPSS easier (all the relevant columns will be somewhat adjacent, limiting\n",
@@ -322,29 +241,20 @@
     "    R = collect(1:15)\n",
     "    _r = Array{Float64}(undef, numsubs)\n",
     "    for arms in eachindex(armconds), symmetry in eachindex(symconds)\n",
-    "        # Only print the variable/condition if it is the first of its type; this will allow a\n",
-    "        # merged cell to be created to encompass all the columns below with that condition\n",
+    "        # Only print the variable/condition if it is the first of its type\n",
     "        subresults[1] *= prod([ arms, symmetry ] .== ones(Int,2)) ? string(variables[vari])*\",\" : \",\"\n",
     "        subresults[2] *= (symmetry == one(Int)) ? string(armconds[arms], \",\") : \",\"\n",
     "        subresults[3] *= string(symconds[symmetry], \",\")\n",
     "        subresults[4] *= string(variables[vari])*shortarms[armconds[arms]]*shortsym[symconds[symmetry]]\n",
     "\n",
-    "        # Grab all the perturbations for this combination of conditions\n",
+    "        # Grab all trials for this combination of conditions\n",
     "        relevant = findall(analyzedtrials) do ass\n",
     "            ass.s.trial.conds[:arms] == armconds[arms] &&\n",
     "            ass.s.trial.conds[:sym] == symconds[symmetry]\n",
     "        end\n",
     "\n",
-    "        # Add the average value for the current variable (eg A, B, etc.) to each subject\n",
-    "        # Nasty/ugly because it is so dense/concise; I think it is better than how verbose the\n",
-    "        # alternative would be\n",
-    "        # The array comprehension runs the inner nastiness for each subject\n",
-    "        \n",
     "        for sub in subs\n",
-    "            # The generator expression is outputting the current variable (eg A, B, etc) for all\n",
-    "            # the relevant perturbations for the current subject\n",
-    "            # The function chain averages the array from the generator expression, and then\n",
-    "            # creates a string representation\n",
+    "            # Grab the appropriate trial for this subject\n",
     "            t = filter(ass -> ass.s.trial.subject == sub, analyzedtrials[relevant])[1].results[variables[vari]]\n",
     "\n",
     "            _r[sub] = t\n",
@@ -368,20 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/media/allen/Seagate Backup Plus Drive/projects/Arm-role-stability/results/cezar-steady-state-step_spatiotemporal.csv\""
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(path, io) = mktemp()\n",
     "\n",
@@ -391,7 +290,7 @@
     "\n",
     "close(io)\n",
     "\n",
-    "resfn = joinpath(rootdir, \"results\", \"steady-state_test.csv\")\n",
+    "resfn = joinpath(rootdir, \"results\", \"steady-state.csv\")\n",
     "\n",
     "mv(path, resfn; force=true)"
    ]
@@ -406,8 +305,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "ac1c873357f0472f818145a6f88ed5d1",
-   "lastKernelId": "e3082fa6-bc5d-4e3c-b8d6-16231fb682f0"
+   "lastCommId": null,
+   "lastKernelId": null
   },
   "kernelspec": {
    "display_name": "Julia 1.0.3",
