--- a/Steady State Analysis.ipynb
+++ b/Steady State Analysis.ipynb
@@ -20,8 +20,8 @@
     "@everywhere using Pkg; @everywhere Pkg.activate(\".\")\n",
     "\n",
     "# Load relevant code on all processes\n",
-    "using ArmRoleStability\n",
-    "@everywhere using ArmRoleStability"
+    "using SteadyStateStability\n",
+    "@everywhere using SteadyStateStability"
    ]
   },
   {
@@ -147,7 +147,7 @@
     "        :msdcrp_rsho_lhip\n",
     "    ]\n",
     "    # NAN the bad trials\n",
-    "    analyzedtrials[badtrials] = [ AnalyzedSegment(Segment(trial, Dict{Symbol,Vector}(), ArmRoleSeg()), \n",
+    "    analyzedtrials[badtrials] = [ AnalyzedSegment(Segment(trial, Dict{Symbol,Vector}(), SteadyStateSeg()), \n",
     "                                                          Dict{Symbol,Any}(( (var, NaN) for var in variables ))) \n",
     "                                  for trial in sstrials[badtrials] ]\n",
     "end"
