Rename package to a better/more descriptive name

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -17,7 +17,7 @@
     "using Distributed\n",
     "@everywhere using Pkg; @everywhere Pkg.activate(\".\")\n",
     "Pkg.instantiate()\n",
-    "using SteadyStateStability, Biomechanics, ProgressMeter"
+    "using EffectsArmswingGaitAsymmetryStability, Biomechanics, ProgressMeter"
    ]
   },
   {
@@ -30,7 +30,7 @@
     "prs = addprocs(;topology=:master_worker, exeflags=[\"-O3\", \"--project=@.\"])\n",
     "\n",
     "# Load relevant code on all processes\n",
-    "@everywhere using SteadyStateStability"
+    "@everywhere using EffectsArmswingGaitAsymmetryStability"
    ]
   },
   {
